name:                changelogged
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GetShopTV/changelogged#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          vitaliy@getshoptv.com
copyright:           (c) 2017, GetShopTV
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    CheckLog.Check
    CheckLog.Common
    Bump.Common
    Bump.API
    Bump.Project
    Utils
    Types
    Settings

  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , optparse-applicative
                     , ansi-terminal
                     , text
                     , yaml
                     , mtl
                     , system-filepath
                     , either
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable changelogged
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , changelogged
                     , turtle
                     , ansi-terminal
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite changelogged-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , changelogged
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GetShopTV/changelogged
