name:                changelogged
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/GetShopTV/changelogged#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          vitaliy@getshoptv.com
copyright:           (c) 2017, GetShopTV
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    CheckLog.Check
    CheckLog.Common
    Bump.Common
    Bump.Local
    Bump.General
    Utils
    Pure
    Types
    Git
    Settings
    Options

  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , optparse-applicative
                     , ansi-terminal
                     , text
                     , yaml
                     , aeson
                     , mtl
                     , exceptions
                     , system-filepath
                     , foldl
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

executable changelogged
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , changelogged
                     , turtle
                     , unordered-containers
                     , ansi-terminal
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

test-suite changelogged-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , changelogged
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GetShopTV/changelogged
