name:                choo-choo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GetShopTV/choo-choo#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          vitaliy@getshoptv.com
copyright:           (c) 2017, GetShopTV
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Bump
    Types
    Settings
                        
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , tuple
                     , ansi-terminal
                     , text
                     , yaml
                     , foldl
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable choo-choo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , choo-choo
                     , turtle
                     , text
                     , ansi-terminal
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite choo-choo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , choo-choo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/choo-choo
